hphp/hack/test/typecheck/tconst/abstract_final_tconst.php
<?hh

// If a class is declared abstract final then it cannot contain any abstract
// type constants

abstract final class C {
  abstract const type T;
}
